src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwP0.25-dhF500-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-column-width { proportion 0.25; }\n    default-window-height { fixed 500; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 800 × 600, states: []

post-map configures:
size: 0 × 0, bounds: 800 × 600, states: []
size: 1264 × 704, bounds: 1264 × 704, states: [Activated]
